--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/codestates/Random-Motivation-Wise-saying#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.8"
   },
