--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^14.2.0",
     "axios": "^0.27.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.1np.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
